# Cpp20examples

./: README.md
00_sort_print/: CMakeLists.txt  main.cpp
01_auto_function_parameter/: CMakeLists.txt  main.cpp
02_ranges/: CMakeLists.txt  main.cpp
03_spaceship_operator/: CMakeLists.txt  main.cpp
04_std_format/: CMakeLists.txt  main.cpp
05_type_constraints/: CMakeLists.txt  main.cpp
06_pipelines_of_views/: CMakeLists.txt  main.cpp
07_iterate_const_views/: CMakeLists.txt  main.cpp
08_iterate_all_views/: CMakeLists.txt  main.cpp
09_views_iterators_sentinels/: CMakeLists.txt  main.cpp
10_new_types_nntp/: CMakeLists.txt  main.cpp
11_merge_values_into_collection/: CMakeLists.txt  main.cpp
12_skip_typename/: CMakeLists.txt  main.cpp
13_auto_parameters/: CMakeLists.txt  main.cpp
14_template_parameters/: CMakeLists.txt  main.cpp
15_customization_point_objects/: CMakeLists.txt  main.cpp
16_compile_time_computing_constexpr/: CMakeLists.txt  main.cpp
17_compile_time_computing_consteval/: CMakeLists.txt  main.cpp
18_compile_time_computing_pass_by_value/: CMakeLists.txt  main.cpp
19_compile_time_collection_computed_size/: CMakeLists.txt  main.cpp
2023/: README.md
20_add_values_to_collection/: CMakeLists.txt  main.cpp
21_auto_function_parameters/: CMakeLists.txt  main.cpp
22_concepts_type_constraints/: CMakeLists.txt  main.cpp
23_concepts_requires_clauses/: CMakeLists.txt  main.cpp
24_concepts_requires_clauses_ranges/: main.cpp  (+1 more)
coroutines/utils/routine/: CMakeLists.txt  main.cpp
modules/: CMakeLists.txt  README.md  foo.cxx  main.cxx
(+256 files in other folders)
